@@ -6,7 +6,7 @@
 
 buildscript {
     ext {
-        opensearch_version = System.getProperty("opensearch.version", "3.4.0-SNAPSHOT")
+        opensearch_version = System.getProperty("opensearch.version", "3.7.0-SNAPSHOT")
         isSnapshot = "true" == System.getProperty("build.snapshot", "true")
         buildVersionQualifier = System.getProperty("build.version_qualifier", "")
         version_tokens = opensearch_version.tokenize('-')
@@ -80,7 +80,7 @@ plugins {
     id 'java-library'
     id "io.freefair.lombok" version "8.14"
     id 'jacoco'
-    id 'com.diffplug.spotless' version '7.2.1'
+    id 'com.diffplug.spotless' version '8.1.0'
 }
 
 // import versions defined in https://github.com/opensearch-project/OpenSearch/blob/main/buildSrc/src/main/java/org/opensearch/gradle/OpenSearchJavaPlugin.java#L94
@@ -113,7 +113,7 @@ spotless {
         removeUnusedImports()
         trimTrailingWhitespace()
         endWithNewline()
-        googleJavaFormat('1.17.0').reflowLongStrings().groupArtifact('com.google.googlejavaformat:google-java-format')
+        googleJavaFormat('1.32.0').reflowLongStrings().groupArtifact('com.google.googlejavaformat:google-java-format')
     }
 }
 
@@ -128,8 +128,16 @@ allprojects {
     }
 
     plugins.withId('java') {
-        sourceCompatibility = targetCompatibility = JavaVersion.VERSION_21
+        java {
+            sourceCompatibility = JavaVersion.VERSION_21
+            targetCompatibility = JavaVersion.VERSION_21
+        }
     }
+
+    tasks.withType(Test) {
+        jvmArgs '-Dnet.bytebuddy.experimental=true'
+    }
+
     configurations.all {
         resolutionStrategy.force "org.jetbrains.kotlin:kotlin-stdlib:1.9.10"
         resolutionStrategy.force "net.minidev:json-smart:${versions.json_smart}"
@@ -138,7 +146,7 @@ allprojects {
         resolutionStrategy.force "org.apache.httpcomponents.client5:httpclient5:${versions.httpclient5}"
         resolutionStrategy.force "org.apache.httpcomponents.core5:httpcore5:${versions.httpcore5}"
         resolutionStrategy.force "org.apache.httpcomponents.core5:httpcore5-h2:${versions.httpcore5}"
-        resolutionStrategy.force "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
+        resolutionStrategy.force "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson_annotations}"
         resolutionStrategy.force "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
         resolutionStrategy.force "com.fasterxml.jackson.core:jackson-databind:${versions.jackson_databind}"
         resolutionStrategy.force "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${versions.jackson}"
